--- a/deel-1-flexbox-positioneren/styles/styles.css
+++ b/deel-1-flexbox-positioneren/styles/styles.css
@@ -1,1 +1,72 @@
 /*Schrijf hier jouw CSS*/
+.opdracht-1 > ul{
+    display: flex;
+    justify-content: space-between;
+}
+
+.opdracht-2 > ul {
+    display: flex;
+    flex-direction: row;
+}
+
+.opdracht-2 li {
+    width: 33%;
+}
+
+.opdracht-3 ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+
+}
+
+.top-left {
+    align-self: flex-start;
+}
+
+.centered {
+    align-self: center;
+}
+
+.bottom-right {
+    align-self: flex-end;
+}
+
+.opdracht-4 ul {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+
+}
+
+.opdracht-5 {
+    display: flex;
+}
+
+.opdracht-5 div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-basis: 100%;
+}
+
+.opdracht-5 ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.column-1 {
+    align-items: flex-start;
+}
+
+.column-2 {
+    align-items: center;
+
+}
+.column-3 {
+    align-items: flex-end;
+}
