--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -1,1 +1,56 @@
 /*Schrijf hier jouw CSS*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*border: darkred 1px solid;*/
+}
+
+body {
+    /*border: rebeccapurple 1px solid ;*/
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    height: 100vh;
+
+}
+div {
+    /*border: rebeccapurple 3px solid;*/
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    min-height: 100vh;
+    width: 100%;
+}
+main {
+    flex-basis: auto;
+    height: 60%;
+    flex-grow: 1;
+    flex-shrink: 1;
+
+}
+nav {
+    flex-basis: auto;
+    height: 100vh;
+    width: 20%;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+header {
+    height: 20%;
+    flex-basis: auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+article {
+    /*border: rosybrown 2px solid;*/
+    height: 100%;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+footer {
+    height: 20%;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
