--- a/deel-2-flexbox-layout/opdracht-3/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-3/styles/styles.css
@@ -1,1 +1,51 @@
 /*Schrijf hier jouw CSS*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*border: darkred 1px solid;*/
+}
+body {
+    /*border: rebeccapurple 1px solid ;*/
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    height: 100vh;
+}
+div {
+    /*border: rebeccapurple 3px solid;*/
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    min-height: 100vh;
+    width: 100%;
+}
+nav {
+    flex-basis: auto;
+    height: 100vh;
+    width: 20%;
+}
+
+header {
+    height: 20%;
+}
+
+main{
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    height: 100%;
+}
+
+article {
+    width: 80%;
+
+}
+
+aside {
+    width: 20%;
+
+}
+footer {
+    height: 20%;
+}
