--- a/deel-2-flexbox-layout/opdracht-4/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-4/styles/styles.css
@@ -1,1 +1,61 @@
 /*Schrijf hier jouw CSS*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*border: darkred 1px solid;*/
+}
+
+body {
+    /*border: blue 1px solid;*/
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    min-height: 100vh;
+    width: 100%;
+}
+.outer-col-1 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+}
+.outer-col-2 {
+    flex-direction: column;
+    display: flex;
+    flex-basis: 100%;
+}
+header {
+    width: 100%;
+    height: 20%;
+}
+nav {
+    width: 25%;
+}
+
+article {
+    width: 100%;
+    height: 80%;
+}
+
+footer {
+    width: 100%;
+    height: 20%;
+}
+.inner-row {
+    /*border: orange 1px solid;*/
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+    width: 100%;
+}
+.inner-col {
+    /*border: purple 1px solid;*/
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    width: 100%;
+}
+
+aside {
+    width: 30%;
+}
