--- a/deel-2-flexbox-layout/opdracht-5/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-5/styles/styles.css
@@ -1,1 +1,39 @@
 /*Schrijf hier jouw CSS*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*border: darkred 1px solid;*/
+}
+body {
+    border: orange 1px solid;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+main {
+    border: blue 1px solid;
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+    height: 100%;
+}
+header {
+    border: red 1px solid;
+    height: 20%;
+}
+article {
+    width: 25%;
+}
+
+nav {
+    width: 50%;
+
+}
+
+aside {
+    width: 25%;
+}
+footer {
+    height: 20%;
+}
