--- a/deel-3-webpagina/styles/styles.css
+++ b/deel-3-webpagina/styles/styles.css
@@ -1,1 +1,96 @@
 /*Schrijf hier jouw css*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*border: darkred 1px solid;*/
+}
+body {
+    /*border: #030027 solid 1px;*/
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    font-family: 'Poppins', sans-serif;
+    color: #030027;
+    background-color: #F2F3D9;
+    /*width: 1200px;*/
+    /*padding: 0 100px;*/
+    /*flex-basis: auto;*/
+    align-self: center;
+    width: 100vw;
+
+}
+nav {
+    background-color: #151E3F;
+    /*font-family: 'Poppins', sans-serif;*/
+    color: snow;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.nav-1 {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 40px;
+}
+.nav-2 {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 40px;
+}
+.container-1 {
+    display: flex;
+    flex-direction: column;
+    height: 450px;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 1000px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 20px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 16px;
+}
+section {
+    /*border: #030027 1px solid;*/
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-self: center;
+    flex-basis: auto;
+    /*min-width: 1000px;*/
+
+    /*height: 100%;*/
+}
+article {
+    background-color: #C16E70 ;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: center;
+    border-radius: 5px;
+    height: 350px;
+    max-width: 280px;
+    flex: 1 1 auto;
+    margin: 15px ;
+    /*gap: 10px 20px;*/
+    font-size: 12px;
+    /*text-align: center;*/
+}
+p {
+    font-size: 14px;
+    padding: 15px;
+}
